Create_Table_LopHoc_NMD392

--- a/LTQL_1721050392/LTQL_1721050392.csproj
+++ b/LTQL_1721050392/LTQL_1721050392.csproj
@@ -131,7 +131,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202112210608281_Create_Table_LopHoc392.cs" />
+    <Compile Include="Migrations\202112210608281_Create_Table_LopHoc392.designer.cs">
+      <DependentUpon>202112210608281_Create_Table_LopHoc392.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DataDBContext.cs" />
+    <Compile Include="Models\LopHoc392.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -186,6 +192,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202112210608281_Create_Table_LopHoc392.resx">
+      <DependentUpon>202112210608281_Create_Table_LopHoc392.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
