--- a/LTQL_1721050392/LTQL_1721050392.csproj
+++ b/LTQL_1721050392/LTQL_1721050392.csproj
@@ -135,9 +135,14 @@
     <Compile Include="Migrations\202112210608281_Create_Table_LopHoc392.designer.cs">
       <DependentUpon>202112210608281_Create_Table_LopHoc392.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202112210619194_Create_Table_NMDSinhvien392.cs" />
+    <Compile Include="Migrations\202112210619194_Create_Table_NMDSinhvien392.Designer.cs">
+      <DependentUpon>202112210619194_Create_Table_NMDSinhvien392.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DataDBContext.cs" />
     <Compile Include="Models\LopHoc392.cs" />
+    <Compile Include="Models\NMDSinhVien392.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -201,6 +206,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202112210608281_Create_Table_LopHoc392.resx">
       <DependentUpon>202112210608281_Create_Table_LopHoc392.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202112210619194_Create_Table_NMDSinhvien392.resx">
+      <DependentUpon>202112210619194_Create_Table_NMDSinhvien392.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
