--- a/LTQL_1721050392/LTQL_1721050392.csproj
+++ b/LTQL_1721050392/LTQL_1721050392.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LopHoc392Controller.cs" />
+    <Compile Include="Controllers\NMDSinhVien392Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -186,6 +187,11 @@
     <Content Include="Views\LopHoc392\Details.cshtml" />
     <Content Include="Views\LopHoc392\Edit.cshtml" />
     <Content Include="Views\LopHoc392\Index.cshtml" />
+    <Content Include="Views\NMDSinhVien392\Create.cshtml" />
+    <Content Include="Views\NMDSinhVien392\Delete.cshtml" />
+    <Content Include="Views\NMDSinhVien392\Details.cshtml" />
+    <Content Include="Views\NMDSinhVien392\Edit.cshtml" />
+    <Content Include="Views\NMDSinhVien392\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
