--- a/LTQL_1721050392/LTQL_1721050392.csproj
+++ b/LTQL_1721050392/LTQL_1721050392.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Models\DataDBContext.cs" />
     <Compile Include="Models\LopHoc392.cs" />
     <Compile Include="Models\NMDSinhVien392.cs" />
+    <Compile Include="Models\StrProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
